2019-10-27  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSUnit.h,
	* Source/NSUnit.m: Clean up code and fix bugs.

2019-10-17  Frederik Seiffert <frederik@algoriddim.com>

	* Source/GSDispatch.h:
	* Source/NSArray.m:
	* Source/NSDictionary.m:
	* Source/NSIndexSet.m:
	* Source/NSOrderedSet.m:
	* Source/NSSet.m:
	Perform non-concurrent block enumeration calls in place instead
	of using serial queue to match Apple platforms.

2019-10-25  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSMapTable.h:
	* Headers/Foundation/NSHashTable.h:
	Added generics support to NSMapTable and updated NSMapTable and
	NSHashTable to use "instancetype".

2019-10-02  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSDictionary.m: fixed mutable dictionary keyed subscript
	behavior: assigning nil value via keyed subscript now correctly
	removes object for key.

2019-09-25  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSProcessInfo.h:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	Added support for data directory on Android. This makes GNUstep use
	the path returned by Context.getFilesDir() as the basis for storing
	data (e.g. NSUserDefaults) and when querying system directory paths
	(NSLibraryDirectory, NSApplicationSupportDirectory, etc.). Requires
	calling a new GSInitializeProcessAndroid() initialization function.

2019-09-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: [-removeObjectsInArray:] add checks to prevent
	possible crashes, particulary if the method argument is the receiver;
	crash seen by Wolfgang.
	* Source/GSSocketStream.m: Fix incorrect key when setting old security
	level.  Change internal API name to avoid confusion.

2019-09-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Re-order code to avoid setting session priority
	twice.
	* Source/NSFileHandle.m: Fux so that setting certificate information
	does not discard any other options already set.
