@@ -1,3 +1,9 @@
+2019-10-28  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/GSSocketStream.m:
+	Prevent premature deallocation when a socket is closed while in a
+	TLS handshake.
+
 2019-10-27  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Headers/Foundation/NSUnit.h,
